--- a/src/sass/partials/_booking.scss
+++ b/src/sass/partials/_booking.scss
@@ -171,8 +171,23 @@
         background: $color-dark;
         opacity: 0.4;
       }
-
     }
+
+    &.selected {
+      color: $color-light;
+
+      &::after {
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background: #78e08f;
+        opacity: 0.4;
+      }
+    }
+
   }
 
   [data-table="1"] {
