--- a/src/sass/partials/home.scss
+++ b/src/sass/partials/home.scss
@@ -8,12 +8,15 @@
   }
 }
 
+#home {
+  background-color: #333;
+}
+
 .home-wrapper {
-  margin: ($base-size * 2.5) auto;
   padding: ($base-size * 6) ($base-size * 4);
   background: $color-light;
   border-bottom: 1px solid lighten($color-dark, 70%);
-  border-radius: $radius;
+  border-radius: 5px;
 
 }
 
@@ -135,56 +138,60 @@
   }
 }
 
-.card-images {
+.cards {
+  margin-top: 100px;
   justify-content: center;
   display: flex;
   flex-wrap: wrap;
-  margin-top: 100px;
 }
 
-.boxes {
+.cards-img-wrapper {
   flex: 0 0 calc(33.333% - 40px);
   text-align: center;
-  margin: 20px 20px 30px 20px;
+  margin: 5px;
   background: white;
   position: relative;
 
+
   img {
-    height: 100%;
+    height: 200px;
     width: 100%;
     object-fit: cover;
     border-radius: 3px;
 
-  }
-
-  #icons {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 25px;
-    transition: 1s;
-  }
-
-  a {
-    margin: 0 5px;
-    color: #fff;
-    display: none;
-  }
-
-  a:first-of-type {
-    color: red;
-  }
-
-  &:hover {
-    background: rgba(0, 0, 0, 0.3);
-
-    a {
-      display: inline-block;
+    &:hover {
+      opacity: 0.5;
+      background: #000;
     }
   }
+
+  .icons {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.5s linear;
+    white-space: nowrap;
+
+  }
+
+  .fa-solid {
+    color: #fff;
+    transition: 1s;
+
+    &:hover::after {
+      color: #ff6b6b;
+      visibility: visible;
+      opacity: 1;
+    }
+  }
+}
+
+.footer {
+  a {
+    color: $color-main;
+  }
+
 }
